--- a/ovtlyr/choose-plan.html
+++ b/ovtlyr/choose-plan.html
@@ -46,7 +46,7 @@
               <li class="nav-item" role="stocklist">
                 <button class="nav-link active" disabled id="chooseplan-tab" data-bs-toggle="tab" data-bs-target="#chooseplantab" type="button" role="tab" aria-controls="chooseplantab" aria-selected="true">
                   <span class="material-icons">done</span>
-                  <p>Choose Your Plan</p>
+                  <p>Select</p>
                 </button>
               </li>
               <li class="nav-item" role="stocklist">
@@ -60,63 +60,92 @@
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="chooseplantab" role="tabpanel" aria-labelledby="chooseplan-tab">
               <div class="tForm_sec111 newTrial_Form">
-                <h3 class="mb-0">Choose Your Plan</h3>
+                <h1>Risk Less. Make More.</h1>
+                <h2>Get Upto 29% Annual Discount And Start Your 21-Day Free Trial</h2>
               </div>
-              <div class="newPlan">
-                <div class="pricingNew2 mb-0">
-                  <ul class="nav nav-tabs" role="tablist">
-                    <li class="nav-item" role="presentation">
-                      <a class="nav-link annual_link" data-bs-toggle="tab" href="#" aria-selected="false" role="tab" tabindex="-1">
-                        <span>Annually</span>
-                      </a>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                      <a class="nav-link active" data-bs-toggle="tab" href="#" aria-selected="true" role="tab">
-                        <span>Monthly</span>
-                      </a> 
-                    </li>
-                  </ul>
+              <div class="plans_flex new_design">
+                <div class="plans_flex1 blueBackg">
+                  <div class="plans_flex12">
+                    <h3>Elite Annually</h3>
+                    <p class="cut_line">Normally $69/mo</p>
+                    <h4>$49<span class="permonth">/month</span></h4>
+                    <p class="billed_an">Billed annually <span>(Save $240/year)</span></p>
+                    <button type="buton">Start Free Trial</button>
+                  </div>
                 </div>
-              </div>
-              <div class="plans_flex">
-                <div class="bestSeller">Best Seller!</div>
                 <div class="plans_flex1">
                   <div class="plans_flex12">
-                    <h6>Research</h6>
-                    <p class="cut_line show_txt">Normally $49/mo<span></span></p>
-                    <h4 class="show_txt">$39<span class="permonth">/month</span></h4>
-                    <h4 class="hide_txt">$49<span class="permonth">/month</span></h4>
-                    <p class="billed_an show_txt">Billed annually <span>(Save $120/year)</span></p>
-                    <button type="buton">Choose This Plan</button>
-                  </div>
-                  <div class="plans_flex11">
-                    <ul>
-                      <li><p>Behavioral HeatMap Charts</p></li>
-                      <li><p>Price Trajectory Oscillator</p></li>
-                      <li><p>Down-Cycle & Recovery Indicators</p></li>
-                      <li><p>Active Trading Room Led By Pros</p></li>
-                    </ul>
+                    <h3>Elite Monthly</h3>
+                    <h4>$69<span class="permonth">/month</span></h4>
+                    <button type="buton">Start Free Trial</button>
                   </div>
                 </div>
-                <div class="plans_flex1 blueBackg">
-                  <div class="bestSeller1">Everything in <span>Research Plus:</span></div>
-                  <div class="plans_flex11">
-                    <ul>
-                      <li><p>Buy &amp; Sell Signals</p></li>
-                      <li><p>Bull &amp; Bear Lists</p></li>
-                      <li><p>Email Notifications</p></li>
-                      <li><p>Favorite List (Unlimited)</p></li>
-                    </ul>
-                  </div>
-                  <div class="plans_flex12">
-                    <h6>Elite</h6>
-                    <p class="cut_line show_txt">Normally $69/mo</p>
-                    <h4 class="show_txt">$49<span class="permonth">/month</span></h4>
-                    <h4 class="hide_txt">$69<span class="permonth">/month</span></h4>
-                    <p class="billed_an show_txt">Billed annually <span>(Save $240/year)</span></p>
-                    <button type="buton">Choose This Plan</button>
-                  </div>
-                </div>
+              </div>
+              <div class="priNew_list">
+                <h4>Features List</h4>
+                <p>The Easiest Way To Start Trading with AI Today</p>
+                <ul>
+                  <li>
+                    <img src="images/pricing-icon-1.svg" alt="Buy &amp; Sell" />
+                    <h5>Buy &amp; Sell Signals</h5>
+                    <p>Know When To Get In &amp; Out Of Positions</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-2.svg" alt="Profit" />
+                    <h5>Behavioral HeatMap Charts</h5>
+                    <p>Profit When Others Are Fearful Or Greedy</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-3.svg" alt="Up or Down" />
+                    <h5>Price Trajectory Oscillator</h5>
+                    <p>Clearly Identify Stock Trajectory Direction (Up or Down) &amp; Reversals</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-4.svg" alt="Uptrend &amp; Downtrend" />
+                    <h5>Uptrend &amp; Downtrend Indicators</h5>
+                    <p>Clearly Identify Trends. Avoid Market Pullbacks.</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-5.svg" alt="Histogram" />
+                    <h5>Directional Volatility Histogram</h5>
+                    <p>See If Each Asset Has Been Behaving Rationally</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-6.svg" alt="Boat" />
+                    <h5>Index &amp; Sector Constituent Maps</h5>
+                    <p>Know If Each Sector Is Facing Headwinds or Tailwinds</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-7.svg" alt="Winning Strategies" />
+                    <h5>Active Trading Rooms Led By Pros</h5>
+                    <p>Easy to Follow Winning Strategies</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-8.svg" alt="Lists" />
+                    <h5>Bull &amp; Bear Lists</h5>
+                    <p>Easily Find Hot Opportunities</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-9.svg" alt="Favorite List" />
+                    <h5>Favorite List</h5>
+                    <p>Quickly Track &amp; Follow Your Favorite Stocks</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-10.svg" alt="Notifications" />
+                    <h5>Email Notifications</h5>
+                    <p>Receive Timely Alerts on Your Favorite Stocks</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-11.svg" alt="Discussions" />
+                    <h5>OVTLYR Community</h5>
+                    <p>Discord Server for Member Support, Trading Ideas Sharing &amp; Strategy Discussions</p>
+                  </li>
+                  <li>
+                    <img src="images/pricing-icon-12.svg" alt="Listed Stocks" />
+                    <h5>Only Trade The Best</h5>
+                    <p>Coverage of Over 1,700 of the Highest Liquidity U.S. Listed Stocks &amp; ETFs</p>
+                  </li>
+                </ul>
               </div>
               <div class="flex_boxes">
                 <div class="flex_boxes2">
@@ -148,7 +177,7 @@
                       </div>
                       <div class="item">
                         <div class="test_box">
-                          <p>“Before OVTLYR my trades were hit or miss. Now I’m seeing consistent returns”</p>
+                          <p>“Before OVTLYR my trades were hit or miss. Now I'm seeing consistent returns”</p>
                           <img src="images/new-testi-2.jpg" alt="" />
                         </div>
                       </div>
@@ -364,40 +393,6 @@
         dots: false
       });
     });
-  </script>
-  <script>
-    $(document).ready(function(){
-    if($('a.nav-link.annual_link').hasClass('active')){
-      $('.show_txt').show();
-      $('.hide_txt').hide();
-    }
-    else{
-      $('.show_txt').hide();
-      $('.hide_txt').show();
-    }
-    if($('.pricingNew2 a.nav-link').click(function(){
-      if($('a.nav-link.annual_link').hasClass('active')) {
-        $('.show_txt').show();
-        $('.hide_txt').hide();
-      }
-      else{
-        $('.show_txt').hide();
-        $('.hide_txt').show();
-      }
-    }));
-    });
-  </script>
-  <script>
-    $('.expand_features').click(function(e) {
-      e.stopPropagation();
-      var featureList = $(this).parent().parent('.pri_body').find('ul');
-      var listHeight = featureList[0].scrollHeight;
-      $(this).hide();
-      featureList.animate({
-        'height': listHeight,
-        'margin-bottom': '0'
-      })
-    });  
   </script>
 </body>
 </html>
