--- a/ovtlyr/coverage-list.html
+++ b/ovtlyr/coverage-list.html
@@ -19,7 +19,7 @@
     <div class="header_inner1 new_head">
       <div class="container">
         <div class="top_header">
-          <p><a href="pricing.html">Take Advantage of our Introductory Pricing While it Lasts!</a></p>
+          <p><a target="_blank" href="http://ovtlyrtraining.com/">Sign Up For Our Free Upcoming Webclass for Traders</a></p>
         </div>
       </div>
     </div>
@@ -36,9 +36,9 @@
             <ul>
               <li><a href="features.html">Features</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#">Live</a></li>
-              <li><a href="log-in.html">Log In</a></li>
-              <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
+              <li><a href="community.html">Community</a></li>
+              <li><a href="#">Logout</a></li>
+              <li><a href="#" class="signUp_btn">Dashboard</a></li>
               <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
             </ul>
             <div class="mobile_menu">
@@ -50,9 +50,9 @@
                 <ul>
                   <li><a href="features.html">Features</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
-                  <li><a href="#">Live</a></li>
-                  <li><a href="log-in.html">Log In</a></li>
-                  <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
+                  <li><a href="community.html">Community</a></li>
+                  <li><a href="#">Logout</a></li>
+                  <li><a href="#" class="signUp_btn">Dashboard</a></li>
                   <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
                 </ul>
               </div>
@@ -74,8 +74,8 @@
     <section class="coverL_sec1">
       <div class="container">
         <div class="coverL_sec11">
-          <h3>OVTLYR Coverage List</h3>
-          <p>The following companies are supported on the OVTLYR platform as of Oct, 2021</p>
+          <h1>OVTLYR Coverage List</h1>
+          <h2>The following companies are supported on the OVTLYR platform as of Oct, 2021</h2>
         </div>
         <div class="coverL_sec12">
           <a href="javascript:void(0);"><i class="material-icons">search</i></a>
