--- a/ovtlyr/features.html
+++ b/ovtlyr/features.html
@@ -19,7 +19,7 @@
     <div class="header_inner1 new_head">
       <div class="container">
         <div class="top_header">
-          <p><a href="pricing.html">Take Advantage of our Introductory Pricing While it Lasts!</a></p>
+          <p><a target="_blank" href="http://ovtlyrtraining.com/">Sign Up For Our Free Upcoming Webclass for Traders</a></p>
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
             <!-- <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/features-video-thumbnail.jpg">
               <source src="images/feature-video.mp4" type="video/mp4">
             </video> -->
-            <iframe src="https://www.youtube.com/embed/gkdMVqy-Eko?si=IDrmyTzIr2DdpCA2" title="YouTube video player" frameborder="0" 
+            <iframe src="https://www.youtube.com/embed/zkZoVKDLnos?si=uqIFhXvxEmPrQsOk" title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
           </div>
           <h2>“People Move Markets. OVTLYR Captures People's Fear & Greed in <span class="block_txt">Ever-Changing Market Conditions. <span class="bold_txt">It's a Game-Changer for Traders.</span>”</span></h2>
@@ -128,7 +128,10 @@
                 view of potential Bull or Bear market conditions.</p>
             </div>
             <div class="side_22">
-              <img src="images/bear-bull.png" alt="Bull & Bear Lists">
+              <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/bear-bull.jpg">
+                <source src="images/bear-bull.mp4" type="video/mp4">
+              </video>
+              <!-- <img src="images/bear-bull.png" alt="Bull & Bear Lists"> -->
             </div>
           </div>
         </div>
@@ -148,10 +151,11 @@
         <div class="featureList_box">
           <div class="side_2 reveal">
             <div class="side_21">
-              <h4>Price Trajectory Oscillator: Clearly Identify Trends & Reversals.</h4>
-              <p>The Price Trajectory Oscillator is an innovative tool that provides traders with a clear view of market trends and potential reversals. Our trajectory oscillator 
-                predicts where stock or ETF price trends are headed for the near-to-intermediate future, ensuring traders can make informed decisions and capitalize on market shifts.</p>
-              <p class="bold_txt mb-0">“In the stock market, the trend is your friend… until it isn't”</p>
+              <h4>Price Trajectory Oscillator: Clearly Identify Stock Trajectory Direction & Reversals.</h4>
+              <p>The Price Trajectory Oscillator is an innovative indicator that provides traders with a clear view of stock trajectory direction and 
+                potential reversals. Our trajectory oscillator predicts where stock or ETF price trajectory is headed for the near-to-intermediate future, 
+                ensuring traders can make informed decisions and capitalize on market shifts.</p>
+              <p class="bold_txt mb-0">“Know when you are swimming with or against the market current”</p>
             </div>
             <div class="side_22">
               <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/oscillator.jpg">
@@ -161,10 +165,10 @@
           </div>
           <div class="side_2 reveal">
             <div class="side_22">
-              <img src="images/heatmap-ss.svg" alt="Heatmap Chart">
-              <!-- <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/heatmap-chart-2.jpg">
+              <!-- <img src="images/heatmap-ss.svg" alt="Heatmap Chart"> -->
+              <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/heatmap-chart-2.jpg">
                 <source src="images/heatmap-chart.mp4" type="video/mp4">
-              </video> -->
+              </video>
             </div>
             <div class="side_21">
               <h4>Behavioral Heatmap Charts: Profit When Others Are Fearful or Greedy.</h4>
@@ -180,7 +184,7 @@
     <section class="new_features1">
       <div class="container">
         <div class="side_11 reveal">
-          <h3>Identify Big Market Pullbacks</h3>
+          <h3>Identify Trends & Avoid Market Pullbacks Make trend your friend to win more.</h3>
           <h5>When multiple sectors & Indexes move you should know.</h5>
           <ul>
             <li>OVTLYR A.I. Predicts When Price Trends Change</li>
@@ -191,10 +195,11 @@
         <div class="featureList_box">
           <div class="side_2 reveal">
             <div class="side_21">
-              <h4>Down Cycle & Recovery Indicators: Avoid Major Market Pullbacks.</h4>
-              <p>The Down-Cycle (Red Overlays on Charts) & Recovery Indicators (Green Overlays) are pivotal for traders, offering timely alerts to sidestep significant market pullbacks. 
-                By identifying potential downturns and subsequent recoveries, these indicators ensure traders navigate market volatility with unpresented foresight.</p>
-              <p class="bold_txt mb-0">“Sometimes avoiding major market pullback is all you need”</p>
+              <h4>Uptrend and Downtrend Indicators: Clearly Identify Trends and Avoid Market Pullbacks.</h4>
+              <p>The Uptrend (Green Overlays) & Downtrend (Red Overlays) are pivotal indicators for traders, offering timely alerts to ride through an 
+                ongoing uptrend or sidestep significant market pullbacks. By identifying these uptrends & downtrends you can navigate market with more 
+                confidence and unpresented foresight.</p>
+              <p class="bold_txt mb-0">“In the stock market, the trend is your friend… until it isn’t”</p>
             </div>
             <div class="side_22">
               <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/down-cycle-2.jpg">
@@ -224,14 +229,14 @@
                 help build a strong trading strategy while keeping a medium to long term view in sight.</p>
             </div>
             <div class="side_22">
-              <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/constituent-map.gif">
+              <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/constituent-map.jpg">
                 <source src="images/constituent-map.mp4" type="video/mp4">
               </video>
             </div>
           </div>
           <div class="side_2 reveal">
             <div class="side_22">
-              <video width="100%" controlslist="noplaybackrate nodownload" controls="false" disablepictureinpicture poster="images/histogram.svg">
+              <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/histogram.jpg">
                 <source src="images/histogram-video.mp4" type="video/mp4">
               </video>
             </div>
@@ -279,7 +284,10 @@
                 track stock performance, stay updated & act promptly on market movements.</p>
             </div>
             <div class="side_22">
-              <img src="images/favorite-list.png" alt="Favorite List">
+              <!-- <img src="images/favorite-list.png" alt="Favorite List"> -->
+              <video width="100%" controlslist="noplaybackrate nodownload" controls disablepictureinpicture poster="images/favlist-thumbnail.jpg">
+                <source src="images/favlist-video.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
           <div class="side_2 reveal">
@@ -317,7 +325,7 @@
             <h3>Risk Free Trial! 21-Days to Try Our System</h3>
             <div class="signUp_Box">
               <input type="text" placeholder="Your email address here">
-              <a href="#">Let's Go<!-- <i class="fa-solid fa-pulse fa-spinner ms-2"></i> --></a>
+              <button type="button">Start 21-Day Free Trial<!-- <i class="fa-solid fa-pulse fa-spinner ms-2"></i> --></button>
             </div>
           </div>
         </div>
