--- a/ovtlyr/home.html
+++ b/ovtlyr/home.html
@@ -3,11 +3,24 @@
 <head>
 <meta charset="utf-8">
 <title>OVTLYR | Home</title>
+<meta name="title" content="" />
 <meta name="description" content="Turning Investor Behavior into Stock Market Success" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 <meta name="format-detection" content="telephone=no">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.svg">
+<link rel="canonical" href="" />
+<meta name="twitter:card" content="" />
+<meta name="twitter:site" content="" />
+<meta name="twitter:title" content="" />
+<meta name="twitter:description" content="" />
+<meta name="twitter:image" content="" />
+<meta property="og:title" content="" />
+<meta property="og:site_name" content="" />
+<meta property="og:url" content="" />
+<meta property="og:description" content="" />
+<meta property="og:type" content="" />
+<meta property="og:image" content="" />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -19,7 +32,7 @@
     <div class="header_inner1 new_head">
       <div class="container">
         <div class="top_header">
-          <p><a href="pricing.html">Take Advantage of our Introductory Pricing While it Lasts!</a></p>
+          <p><a target="_blank" href="http://ovtlyrtraining.com/">Sign Up For Our Free Upcoming Webclass for Traders</a></p>
         </div>
       </div>
     </div>
@@ -38,8 +51,9 @@
               <li><a href="pricing.html">Pricing</a></li>
               <li><a href="community.html">Community</a></li>
               <li><a href="log-in.html">Log In</a></li>
+              <li><button type="button">Logout</button></li>
               <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
-              <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
+              <li><button type="button" class="trial_btn">Start Your Free Trial Today</button></li>
             </ul>
             <div class="mobile_menu">
               <div class="b-nav">
@@ -52,8 +66,9 @@
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="community.html">Community</a></li>
                   <li><a href="log-in.html">Log In</a></li>
+                  <li><button type="button">Logout</button></li>
                   <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
-                  <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
+                  <li><button type="button" class="trial_btn">Start Your Free Trial Today</button></li>
                 </ul>
               </div>
               <!-- Burger-Icon -->
@@ -78,9 +93,9 @@
           <h2>Leverage Evolving Market Behaviors to Predict Price Trends</h2>
           <div class="signUp_Box">
             <input type="text" placeholder="Your email address here">
-            <a href="#">Let's Go<!-- <i class="fa-solid fa-pulse fa-spinner ms-2"></i> --></a>
+            <button type="button">Start 21-Day Free Trial<!-- <i class="fa-solid fa-pulse fa-spinner ms-2"></i> --></button>
           </div>
-          <p>21-Day Risk Free Trial</p>
+          <p><a href="https://youtu.be/zkZoVKDLnos" target="_blank"><img src="images/white-video-icon.svg" alt="Video Icon">Watch Video</a></p>
         </div>
       </div>
     </section>
@@ -94,25 +109,25 @@
             <div class="image_box">
               <img src="images/stock-price.svg" alt="Stock Prices" />
             </div>
-            <h6>Stock Prices Move Like A Herd</h6>
+            <h4>Stock Prices Move Like A Herd</h4>
           </li>
           <li>
             <div class="image_box">
               <img src="images/lookout.svg" alt="Lookout" />
             </div>
-            <h6>OVTLYR Is Your Lookout</h6>
+            <h4>OVTLYR Is Your Lookout</h4>
           </li>
           <li>
             <div class="image_box">
               <img src="images/ai-identifiers.svg" alt="Identifies" />
             </div>
-            <h6>Our AI Identifies Opportunities</h6>
+            <h4>Our AI Identifies Opportunities</h4>
           </li>
           <li>
             <div class="image_box">
               <img src="images/trades.svg" alt="Trades" />
             </div>
-            <h6>You Win More Trades With Less Risk!</h6>
+            <h4>You Win More Trades With Less Risk!</h4>
           </li>
         </ul>
       </div>
@@ -200,25 +215,25 @@
             <div class="image_box">
               <img src="images/video-training.svg" alt="Video Training" />
             </div>
-            <h6>Video Training & Documentation</h6>
+            <h4>Video Training & Documentation</h4>
           </li>
           <li>
             <div class="image_box">
               <img src="images/webinars.svg" alt="Webinars" />
             </div>
-            <h6>Webinars & Live Broadcasts</h6>
+            <h4>Webinars & Live Broadcasts</h4>
           </li>
           <li>
             <div class="image_box">
               <img src="images/trading-rooms.svg" alt="Trading Rooms" />
             </div>
-            <h6>Discord Trading Rooms</h6>
+            <h4>Discord Trading Rooms</h4>
           </li>
           <li>
             <div class="image_box">
               <img src="images/email-support.svg" alt="Email Support" />
             </div>
-            <h6>Email Support & Newsletter</h6>
+            <h4>Email Support & Newsletter</h4>
           </li>
         </ul>
         <div class="newHome_foot1">
@@ -228,13 +243,69 @@
         </div>
       </div>
     </section>
+    <section class="newHome_7">
+      <div class="container">
+        <div class="newHome_head1">
+          <h3 class="mb-0">Check Out These Sucess Stories from <span class="block_txt">Real Traders Using OVTLYR!</span></h3>
+        </div>
+        <div class="newHome_71">
+          <ul>
+            <li>
+              <img src="images/ss1.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss3.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss4.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss11.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss15.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss5.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss8.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss14.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss6.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss7.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss2.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss12.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss9.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss10.png" alt="Testimonials" />
+            </li>
+            <li>
+              <img src="images/ss13.png" alt="Testimonials" />
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <section class="newHome_3">
       <div class="container">
         <div class="newHome_head3">
           <h3 class="mb-0">Tour of The OVTLYR Platform</h3>
         </div>
         <div class="newHome_cont3">
-          <iframe src="https://www.youtube.com/embed/gkdMVqy-Eko?si=IDrmyTzIr2DdpCA2" title="YouTube video player" 
+          <iframe src="https://www.youtube.com/embed/ghklU2bY91A?si=8yKiJLd0wTKQBWB_" title="YouTube video player" 
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
@@ -330,7 +401,7 @@
             <h3>Risk Free Trial! 21-Days to Try Our System</h3>
             <div class="signUp_Box">
               <input type="text" placeholder="Your email address here">
-              <a href="#">Let's Go<!-- <i class="fa-solid fa-pulse fa-spinner ms-2"></i> --></a>
+              <button type="button">Start 21-Day Free Trial<!-- <i class="fa-solid fa-pulse fa-spinner ms-2"></i> --></button>
             </div>
           </div>
         </div>
