--- a/ovtlyr/privacy-policy.html
+++ b/ovtlyr/privacy-policy.html
@@ -19,7 +19,7 @@
     <div class="header_inner1 new_head">
       <div class="container">
         <div class="top_header">
-          <p><a href="pricing.html">Take Advantage of our Introductory Pricing While it Lasts!</a></p>
+          <p><a target="_blank" href="http://ovtlyrtraining.com/">Sign Up For Our Free Upcoming Webclass for Traders</a></p>
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
             <ul>
               <li><a href="features.html">Features</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#">Live</a></li>
+              <li><a href="community.html">Community</a></li>
               <li><a href="log-in.html">Log In</a></li>
               <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
               <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -50,7 +50,7 @@
                 <ul>
                   <li><a href="features.html">Features</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
-                  <li><a href="#">Live</a></li>
+                  <li><a href="community.html">Community</a></li>
                   <li><a href="log-in.html">Log In</a></li>
                   <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
                   <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -74,11 +74,11 @@
     <section class="coverL_sec1">
       <div class="container">
         <div class="backtest_head">
-          <h3>Privacy Policy</h3>
+          <h1>Privacy Policy</h1>
           <p class="grey_color">Last Updated: November 28, 2022</p>
         </div>
         <div class="policies_sec">
-          <p>OVTLYR (<b>“OVTLYR</b>,” “<b>we</b>,” “<b>our</b>,” and/or “<b>us</b>”) values the privacy of individuals who use our mobile application, website, and related services (collectively, our “<b>Services</b>”). This privacy policy (the “<b>Privacy Policy</b>”) explains how we collect, use, and share information from users of our Services (“<b>Users</b>,” “<b>you</b>” or “<b>your</b>”) to facilitate the protection of our Users and continue to improve our Services. By using our Services, you agree to the collection, use, disclosure, and procedures this Privacy Policy describes. Beyond the Privacy Policy, your use of our Services is also subject to our Terms of Service.</p>
+          <h2>OVTLYR (<b>“OVTLYR</b>,” “<b>we</b>,” “<b>our</b>,” and/or “<b>us</b>”) values the privacy of individuals who use our mobile application, website, and related services (collectively, our “<b>Services</b>”). This privacy policy (the “<b>Privacy Policy</b>”) explains how we collect, use, and share information from users of our Services (“<b>Users</b>,” “<b>you</b>” or “<b>your</b>”) to facilitate the protection of our Users and continue to improve our Services. By using our Services, you agree to the collection, use, disclosure, and procedures this Privacy Policy describes. Beyond the Privacy Policy, your use of our Services is also subject to our Terms of Service.</h2>
           <h3 class="heading-terms">Information We Collect</h3>
           <p>We may collect a variety of information from or about you or your devices from various sources, as described below.</p>
           <p><b>A. Information You Provide to Us</b></p>
