--- a/ovtlyr/terms-of-use.html
+++ b/ovtlyr/terms-of-use.html
@@ -19,7 +19,7 @@
     <div class="header_inner1 new_head">
       <div class="container">
         <div class="top_header">
-          <p><a href="pricing.html">Take Advantage of our Introductory Pricing While it Lasts!</a></p>
+          <p><a target="_blank" href="http://ovtlyrtraining.com/">Sign Up For Our Free Upcoming Webclass for Traders</a></p>
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
             <ul>
               <li><a href="features.html">Features</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#">Live</a></li>
+              <li><a href="community.html">Community</a></li>
               <li><a href="log-in.html">Log In</a></li>
               <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
               <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -50,7 +50,7 @@
                 <ul>
                   <li><a href="features.html">Features</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
-                  <li><a href="#">Live</a></li>
+                  <li><a href="community.html">Community</a></li>
                   <li><a href="log-in.html">Log In</a></li>
                   <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
                   <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -74,12 +74,12 @@
     <section class="coverL_sec1">
       <div class="container">
         <div class="backtest_head">
-          <h3>Terms of Use</h3>
-          <p class="grey_color">Last Updated: October 12, 2022</p>
+          <h1>Terms of Use</h3>
+          <p class="grey_color">Last Updated: October 12, 2022</h1>
         </div>
         <div class="policies_sec">
           <div class="terms_head">
-            <p>Welcome, and thank you for your interest in OVTLYR, Inc. (“<b>OVTLYR</b>,” “<b>we</b>,” or “<b>us</b>”) and our website at www.ovtlyr.com, along with our related websites, mobile or other downloadable applications, and other services provided by us (collectively, the “<b>Service</b>”). These Terms of Service are a legally binding contract between you and OVTLYR regarding your use of the Service.</p>
+            <h2>Welcome, and thank you for your interest in OVTLYR, Inc. (“<b>OVTLYR</b>,” “<b>we</b>,” or “<b>us</b>”) and our website at www.ovtlyr.com, along with our related websites, mobile or other downloadable applications, and other services provided by us (collectively, the “<b>Service</b>”). These Terms of Service are a legally binding contract between you and OVTLYR regarding your use of the Service.</h2>
             <h4>PLEASE READ THE FOLLOWING TERMS CAREFULLY:</h4>
           </div>
           <p><b>BY CLICKING “I ACCEPT,” OR BY DOWNLOADING, INSTALLING, OR OTHERWISE ACCESSING OR USING THE SERVICE,</b> YOU AGREE THAT YOU HAVE READ AND UNDERSTOOD, AND, AS A CONDITION TO YOUR USE OF THE SERVICE, YOU AGREE TO BE BOUND BY, THE FOLLOWING TERMS AND CONDITIONS, INCLUDING OVTLYR’S PRIVACY POLICY [https://ovtlyr.com/Privacy-Policy] (TOGETHER, THESE “TERMS”). IF YOU ARE NOT ELIGIBLE, OR DO NOT AGREE TO THE TERMS, THEN YOU DO NOT HAVE OUR PERMISSION TO USE THE SERVICE. YOUR USE OF THE SERVICE, AND OVTLYR’S PROVISION OF THE SERVICE TO YOU, CONSTITUTES AN AGREEMENT BY OVTLYR AND BY YOU TO BE BOUND BY THESE TERMS.</p>
