--- a/ovtlyr/about-us.html
+++ b/ovtlyr/about-us.html
@@ -19,7 +19,7 @@
     <div class="header_inner1 new_head">
       <div class="container">
         <div class="top_header">
-          <p><a href="pricing.html">Take Advantage of our Introductory Pricing While it Lasts!</a></p>
+          <p><a target="_blank" href="http://ovtlyrtraining.com/">Sign Up For Our Free Upcoming Webclass for Traders</a></p>
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
     <section class="new_about1">
       <div class="container">
         <div class="new_about11 reveal">
-          <h2>Our Team</h2>
+          <h3>Our Team</h3>
         </div>
         <div class="new_about2">
           <div class="about_1 reveal">
