--- a/ovtlyr/roadmap.html
+++ b/ovtlyr/roadmap.html
@@ -19,7 +19,7 @@
     <div class="header_inner1 new_head">
       <div class="container">
         <div class="top_header">
-          <p><a href="pricing.html">Take Advantage of our Introductory Pricing While it Lasts!</a></p>
+          <p><a target="_blank" href="http://ovtlyrtraining.com/">Sign Up For Our Free Upcoming Webclass for Traders</a></p>
         </div>
       </div>
     </div>
